--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,5 +17,6 @@ jobs:
         
       - name: Release
         uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: Release.txt
