--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,4 +20,5 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: Release.txt
+          repository: danon/pack
           token: ${{ secrets.ASSET_TOKEN }}
