--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,24 +1,23 @@
 name: Main
 
-on: push
+on:
+  push:
+    tags:
+      - '*'
 
 jobs:
   build:
+    name: Upload Release Asset
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
-      - name: Build
-        run: echo ${{ github.sha }} > Release.txt
-        
-      - name: Test
-        run: cat Release.txt
         
       - name: Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: Release.txt
+          files: my-artifact.zip
           repository: danon/pack
-          token: ${{ secrets.ASSET_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
