--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
   "type": "library",
-  "name": "danon/pack"
+  "name": "danon/pack",
+  "version": "1.6.1",
+  "dist": {
+    "url": "https://objects.githubusercontent.com/github-production-release-asset-2e65be/797958718/8782a5ba-a7b9-4a48-a1a9-7a4228cc0ad8?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20240512%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20240512T103041Z&X-Amz-Expires=300&X-Amz-Signature=fb58429c69c76e7aef4e51b4ca11368fda34753f6b33dd0e9e9802eefc8c39a9&X-Amz-SignedHeaders=host&actor_id=13367735&key_id=0&repo_id=797958718&response-content-disposition=attachment%3B%20filename%3Dmy-artifact.zip&response-content-type=application%2Foctet-stream",
+    "type": "zip"
+  }
 }
